@@ -121,7 +121,6 @@ test {
     systemProperty 'com.athaydes.spockframework.report.projectName', 'ods-jenkins-shared-library'
     systemProperty 'com.athaydes.spockframework.report.projectVersion', version
     maxHeapSize = "2048m"
-    jvmArgs "-XX:MaxPermSize=256m"
     systemProperty "testRecordMode", project.findProperty('testRecordMode')?: false
     systemProperty "generateExpectedPdfFiles", project.findProperty('generateExpectedPdfFiles')?: false
     systemProperty "nexusURL", project.findProperty('nexusURL')?: "http://nexus.odsbox.lan:7990"
@@ -137,7 +136,7 @@ test {
 }
 
 codenarc {
-    toolVersion = '1.5'
+    toolVersion = '1.6'
     configFile = file('codenarc.groovy')
     maxPriority1Violations = 0
     maxPriority2Violations = 1
